# mockau

./: .dockerignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  mockau_actions_for_test.json  mockau_actions_for_test.yaml  pyproject.toml  requirements.txt
docs/: bugs.md  development_plan_en.md  development_plan_hy.md  development_plan_ru.md  philosophy_en.md  philosophy_hy.md  philosophy_ru.md  tasks.md
docs/notes/predicates/: unified_json_type.md
src/: celery_worker.py  consts.py  dependencies.py  main.py  mockau_fastapi.py  settings.py
src/admin/: queries.py  router.py  schemas.py
src/core/: init_elasticsearch_documents.py
src/core/bases/: base_document_model.py  base_model.py  base_model_async_document.py  base_model_inner_document.py  base_model_schema.py
src/core/deprecated_matchers/: abstract_matcher.py  integer_matcher.py  (+2 more)
src/es_documents/: events.py
src/factories/: http_request_factory.py
src/models/: base_model.py  events.py  events_chain.py  storable_settings.py
src/processor/: background_tasks.py  processor_events_handler.py  processor_pipeline.py
src/schemas/: __init__.py  base_schema.py  common_variables.py  events.py  http_request_response_view.py  http_response.py  undefined_schema.py  variables.py  variables_context.py
src/tests/: test_template_variables_group.py  test_variable_matcher.py  test_variables_group.py
src/utils/: compression.py  formatters.py  heuristics.py  kuhn_matching_algorithm.py  mongo.py  string_utils.py  traceparent.py  z3_helpers.py
(+183 files in other folders)
