[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "preserve"

[tool.poetry]
name = "mockau"
version = "0.2.0"
description = ""
authors = ["Timofey Dolganov <kaor.bp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.13"
apscheduler = "^3.11.0"
fastapi = "^0.115.8"
httpx = { extras = ["http2"], version = "^0.28.1" }
lxml = "^5.3.0"
motor = "^3.7.0"
polyfactory = "^2.19.0"
pydantic = "^2.10.6"
pytest = "^8.3.4"
pytz = "^2025.1"
python-dateutil = "^2.9.0.post0"
ruff = "^0.9.4"
isort = "^6.0.0"
elasticsearch = "^8.17.1"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.11"
elasticsearch-dsl = {extras = ["async"], version = "^8.17.1"}
genson = "^1.3.0"
celery = {extras = ["redis"], version = "^5.4.0"}
celery-once = "^3.0.1"
pyformlang = "^1.0.10"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
